[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fil_actors_runtime = { path = "../runtime", features = ["test_utils"] }
tcid = { path = "../tcid" }

fvm_shared = { version = "0.8.0", default-features = false }
fvm_ipld_hamt = "0.5.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
log = "0.4.14"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }