[package]
description = "The primitive types for fvm"
edition = "2021"
name = "primitives"
version = "0.1.0"

[dependencies]
fil_actors_runtime = {path = "../runtime", features = ["fil-actor"]}
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm", branch = "upgrade-fvm" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm", branch = "upgrade-fvm" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm", branch = "upgrade-fvm" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "upgrade-fvm", features = ["crypto"] }

anyhow = "1.0.56"
cid = {version = "0.10.1", default-features = false, features = ["serde-codec"]}
hex = "0.4.3"
indexmap = {version = "1.8.0", features = ["serde-1"]}
integer-encoding = {version = "3.0.3", default-features = false}
lazy_static = "1.4.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = {version = "1.0.136", features = ["derive"]}
uint = {version = "0.9.3", default-features = false}
